# cport

./: .darglint  .gitignore  .gitmodules  .prospector.yaml  .prospector.yml  CONTRIBUTE.md  DEVELOPING.md  INSTALL.md  README.md  __init__.py  codecov.yml  config.json  cport.csv  cport.py  pyproject.toml  requirements.txt  setup.py  stack.md
.github/workflows/: lint.yml  unittests.yml
.trunk/: actions  logs  notifications  out  trunk.yaml
.trunk/plugins/: trunk
data/training_dataset_w_values/: 1A2K_cport_ready.csv  1ACB_cport_ready.csv  1AK4_cport_ready.csv  1AKJ_cport_ready.csv  1ATN_cport_ready.csv  1AVX_cport_ready.csv  1AY7_cport_ready.csv  1AZS_cport_ready.csv  1B6C_cport_ready.csv  1BKD_cport_ready.csv  1BUH_cport_ready.csv  1BVN_cport_ready.csv  1CGI_cport_ready.csv  (+176 more)
etc/: config.json
example/: 1PPE_msa.fasta  1PPE_one.maf
ml_outputs/: threshold_scores_1693401136_1912572X16.csv
send_file/: meta_ppisp.py  pro_mate.py  request_SCRIBER.py  spider.py  test_request_SCRIBER.py  test_request_WHISCY.py  whiscy.py
tests/: test_cons_ppisp.py  test_csm_potential.py  test_ispred4.py  test_meta_ppisp.py  test_pdb_fasta.py  test_predict.py  test_predictprotein.py  test_predus2.py  test_psiver.py  test_scannet.py  test_scriber.py  test_sppider.py  test_utils.py  test_whiscy.py
tools/: calc_sasa.py  fetch_files.py  haddock_calc_sasa.py  parser.py  pdb.py  predictors.py  reconstruct_pdb.py  residiues_distance.py  save_csv.py  seq.py  sequence_convert.py  threshold.py  threshold1.stat  threshold3.stat  validations.py  whiscy_hssp.py  whiscy_pdbutil.py
(+343 files in other folders)
