[tool.poetry]
name = "cport"
version = "0.1.0"
description = ""
authors = ["BonvinLab"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
biopython = "^1.83"
mechanicalsoup = "^1.3.0"
defusedxml = "^0.7.1"
pandas = "^2.2.2"
pdb-tools = "^2.5.0"
keras = "^2.13.1"
tensorflow = "^2.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
coverage = "*"
hypothesis = "~6"

[tool.poetry.scripts]
cport = "cport.cli:maincli"

[tool.setuptools]
include-package-data = true
packages = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
