[tool.poetry]
name = "cport"
version = "0.1.0"
description = ""
authors = ["BonvinLab"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
biopython = "^1.83"
mechanicalsoup = "^1.3.0"
defusedxml = "^0.7.1"
pandas = "^2.2.2"
pdb-tools = "^2.5.0"
keras = "^2.13.1"
tensorflow = "^2.13.0"
idna = "^3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
coverage = "^7.5.0"
hypothesis = "^6.100.2"

[tool.poetry.scripts]
cport = "cport.cli:maincli"

[tool.setuptools]
include-package-data = true
packages = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
